--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.0.41",
     "@react-email/render": "^1.1.2",
+    "@tanstack/query-devtools": "^5.76.0",
+    "@tanstack/react-query": "^5.77.2",
+    "@tanstack/react-query-devtools": "^5.77.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ky": "^1.8.1",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
     "react": "^19.0.0",
